// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/left-sidebar should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-admin-console"
  viewBox="0 0 14 16"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M12.8 13.6c.6 0 1.2.5 1.2 1s-.5 1.1-1.2 1.1H1.1c-.6 0-1.2-.5-1.2-1.1s.5-1 1.2-1h11.7zM1.6 12.1c-.9 0-1.6-.7-1.6-1.5V6.9c0-.8.7-1.5 1.6-1.5.9 0 1.6.7 1.6 1.5v3.7c-.1.8-.8 1.5-1.6 1.5zm7-1.5c0 .8-.7 1.5-1.6 1.5s-1.6-.7-1.6-1.5V4.7c0-.8.7-1.5 1.6-1.5s1.6.7 1.6 1.5v5.9zM12.4.3c.9 0 1.6.7 1.6 1.5v8.8c0 .8-.7 1.5-1.6 1.5-.9 0-1.6-.7-1.6-1.5V1.8c.1-.8.8-1.5 1.6-1.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 2`] = `
<AccessibleSVG
  className="icon-automations"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M8,5 L11.4585117,5 C11.7575674,5 12,5.23405867 12,5.52278468 C12,5.61753624 11.9733275,5.71050639 11.9228341,5.79175518 L7.00581071,13.7461068 C6.8519478,13.9936873 6.51933305,14.0739688 6.26289487,13.9254205 C6.09979566,13.8309411 6,13.6607712 6,13.4771363 L6,9 L2.54148831,9 C2.24243258,9 2,8.76594133 2,8.47721532 C2,8.38246376 2.02667254,8.28949361 2.07716592,8.20824482 L6.99418929,0.253893189 C7.1480522,0.00631268077 7.48066695,-0.0739687821 7.73710513,0.0745795227 C7.90020434,0.169058867 8,0.33922885 8,0.522863688 L8,5 Z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 3`] = `
<AccessibleSVG
  className="icon-box-relay"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1 1.002V1h5.001l-1.94 3.668a.5.5 0 0 0 .094.592L8.001 9H3.947l1.022 3.743a1 1 0 0 1-1.932.517L.034 2.261A1 1 0 0 1 1 1.001zM8.001 1h3.495a.5.5 0 0 1 .458.7L10.08 4.625a.5.5 0 0 0 .112.662L13.87 8.17a.5.5 0 0 1-.375.831h-3.494L6.155 5.33a.5.5 0 0 1-.098-.593z"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 4`] = `
<AccessibleSVG
  className="icon-all-files"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1.4 1.4h4.2L7 2.8h5.6c.8 0 1.4.6 1.4 1.4v7c0 .8-.6 1.4-1.4 1.4H1.4C.6 12.6 0 12 0 11.2V2.8c0-.8.6-1.4 1.4-1.4zM2 4.5v1h10v-1H2z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 5`] = `
<AccessibleSVG
  className="icon-dev-console"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M2.3 7.2l1.5 1.5c.3.3.3.8 0 1.1-.3.3-.8.3-1.1 0L.1 7.1l2.6-2.6c.3-.3.8-.3 1.1 0s.3.8 0 1.1L2.3 7.2zm8-1.5c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0L14 7.3l-2.6 2.6c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.5-1.5-1.5-1.6zm-4.1 5c-.1.4-.6.6-1 .5s-.6-.6-.5-1l2.4-6.8c.1-.4.6-.6 1-.5.4.1.6.6.5 1l-2.4 6.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 6`] = `
<AccessibleSVG
  className="icon-favorites"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 11.5l-4 2.1c-.2.1-.4 0-.5-.1v-.2l.8-4.4L.1 5.8c-.1-.1-.1-.4 0-.5.1-.1.1-.1.2-.1l4.4-.6 2-4c.1-.2.3-.2.5-.2.1 0 .1.1.2.2l2 4 4.4.6c.2 0 .3.2.3.4 0 .1 0 .1-.1.2l-3.2 3.1.8 4.4c0 .2-.1.4-.3.4h-.2L7 11.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 7`] = `
<AccessibleSVG
  className="icon-feed"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M.8 0h12.4c.4 0 .8.3.8.8v6.8c0 .4-.3.8-.8.8H.8c-.4 0-.8-.3-.8-.8V.8C0 .3.3 0 .8 0zM.7 9.8h12.6c.4 0 .7.3.7.7s-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7s.3-.7.7-.7zm0 2.8h12.6c.4 0 .7.3.7.7 0 .4-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 8`] = `
<AccessibleSVG
  className="icon-notes"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M9.7 1.3H1c-.6 0-1 .4-1 1s.4 1 1 1h7.3l1.4-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h4.8l1.3-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h2.5l.1-.3c.1-.2.1-.5.2-.7l.7-1zm6.4-6.1c.2.3.5.5.7.7.3.2.6.3.9.4l-4.9 7.4-.3.3-1.7 1.3c-.1.1-.2 0-.2-.1l.5-2.2c.1-.2.1-.3.2-.5l4.8-7.3zm1.3-2.1c.6-.2 1.3.1 1.5.7v.3c-.2.4-.3.7-.5 1l-.9-.3c-.3-.2-.6-.4-.8-.8l.7-.9z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 9`] = `
<AccessibleSVG
  className="icon-notifications"
  viewBox="0 0 14 16.1"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M5.5 14.6h3.1c0 .8-.7 1.5-1.5 1.5s-1.6-.7-1.6-1.5zm6.9-7.7v4.5L14 13v.8H0V13l1.6-1.6V6.9c0-2.5 1.8-4.6 4.1-5.1v-.6C5.7.5 6.3 0 6.9 0c.7 0 1.2.5 1.2 1.2v.6c2.5.5 4.3 2.6 4.3 5.1z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 10`] = `
<AccessibleSVG
  className="icon-owned-by-me"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M7,2.6c1.3,0,2.3,1,2.3,2.3c0,1.3-1,2.3-2.3,2.3 c-1.3,0-2.3-1-2.3-2.3C4.7,3.7,5.7,2.6,7,2.6z M7,12.5c-1.6,0-3-0.7-4-1.8C3.6,9.1,5.2,8,7,8c1.8,0,3.4,1.1,4,2.8 C10,11.8,8.6,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 11`] = `
<AccessibleSVG
  className="icon-recents"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 7V2.5c0-.3-.2-.5-.5-.5s-.5.2-.5.5v5c0 .3.2.5.5.5h3c.3 0 .5-.2.5-.5S9.8 7 9.5 7H7zm0 7c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 12`] = `
<AccessibleSVG
  className="icon-relay"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M14 2.8H9.8V1.4H2.1v-.3C2.1.5 1.6 0 1 0S0 .5 0 1.1V13c0 .6.5 1.1 1.1 1.1s1.1-.5 1.1-1.1V8.4h5.5l-.6 1.4h7l-1.4-3.5L14 2.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 13`] = `
<AccessibleSVG
  className="icon-shared-with-me"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M9.7,4.7c1,0,1.8,0.8,1.8,1.8s-0.8,1.8-1.8,1.8 c-1,0-1.8-0.8-1.8-1.8S8.7,4.7,9.7,4.7z M4.7,3c1.2,0,2.2,1,2.2,2.2c0,1.2-1,2.2-2.2,2.2c-1.2,0-2.2-1-2.2-2.2C2.5,4,3.5,3,4.7,3z M7,12.5c-2.2,0-4.2-1.3-5-3.2c0.7-0.9,1.7-1.5,2.8-1.5c1.2,0,2.3,0.7,3,1.7c0.5-0.5,1.2-0.8,2-0.8c0.8,0,1.5,0.3,2.1,0.9 C10.9,11.3,9.1,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 14`] = `
<AccessibleSVG
  className="icon-synced"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M6.5 9.6l-2-2c-.2-.2-.5-.2-.7 0-.2.2-.2.5 0 .7L6.6 11c.1.1.2.1.3.1.1 0 .3 0 .4-.2L10 8.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0l-1.9 2V3.3c0-.3-.2-.5-.5-.5s-.4.2-.4.5v6.3zm.4 4.4c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render default icon 15`] = `
<AccessibleSVG
  className="icon-trash"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M13.1 0h.9l-2.1 12.8c-.1.7-.8 1.2-1.4 1.2h-7c-.7 0-1.3-.6-1.4-1.2L0 0h13.1zM9.9 2.3H4.1c-.3 0-.6.2-.6.6s.2.6.6.6h5.8c.3 0 .6-.2.6-.6s-.2-.6-.6-.6z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 1`] = `
<AccessibleSVG
  className="icon-admin-console"
  viewBox="0 0 14 16"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M12.8 13.6c.6 0 1.2.5 1.2 1s-.5 1.1-1.2 1.1H1.1c-.6 0-1.2-.5-1.2-1.1s.5-1 1.2-1h11.7zM1.6 12.1c-.9 0-1.6-.7-1.6-1.5V6.9c0-.8.7-1.5 1.6-1.5.9 0 1.6.7 1.6 1.5v3.7c-.1.8-.8 1.5-1.6 1.5zm7-1.5c0 .8-.7 1.5-1.6 1.5s-1.6-.7-1.6-1.5V4.7c0-.8.7-1.5 1.6-1.5s1.6.7 1.6 1.5v5.9zM12.4.3c.9 0 1.6.7 1.6 1.5v8.8c0 .8-.7 1.5-1.6 1.5-.9 0-1.6-.7-1.6-1.5V1.8c.1-.8.8-1.5 1.6-1.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 2`] = `
<AccessibleSVG
  className="icon-automations"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M8,5 L11.4585117,5 C11.7575674,5 12,5.23405867 12,5.52278468 C12,5.61753624 11.9733275,5.71050639 11.9228341,5.79175518 L7.00581071,13.7461068 C6.8519478,13.9936873 6.51933305,14.0739688 6.26289487,13.9254205 C6.09979566,13.8309411 6,13.6607712 6,13.4771363 L6,9 L2.54148831,9 C2.24243258,9 2,8.76594133 2,8.47721532 C2,8.38246376 2.02667254,8.28949361 2.07716592,8.20824482 L6.99418929,0.253893189 C7.1480522,0.00631268077 7.48066695,-0.0739687821 7.73710513,0.0745795227 C7.90020434,0.169058867 8,0.33922885 8,0.522863688 L8,5 Z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 3`] = `
<AccessibleSVG
  className="icon-box-relay"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M1 1.002V1h5.001l-1.94 3.668a.5.5 0 0 0 .094.592L8.001 9H3.947l1.022 3.743a1 1 0 0 1-1.932.517L.034 2.261A1 1 0 0 1 1 1.001zM8.001 1h3.495a.5.5 0 0 1 .458.7L10.08 4.625a.5.5 0 0 0 .112.662L13.87 8.17a.5.5 0 0 1-.375.831h-3.494L6.155 5.33a.5.5 0 0 1-.098-.593z"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 4`] = `
<AccessibleSVG
  className="icon-all-files"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M1.4 1.4h4.2L7 2.8h5.6c.8 0 1.4.6 1.4 1.4v7c0 .8-.6 1.4-1.4 1.4H1.4C.6 12.6 0 12 0 11.2V2.8c0-.8.6-1.4 1.4-1.4zM2 4.5v1h10v-1H2z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 5`] = `
<AccessibleSVG
  className="icon-dev-console"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M2.3 7.2l1.5 1.5c.3.3.3.8 0 1.1-.3.3-.8.3-1.1 0L.1 7.1l2.6-2.6c.3-.3.8-.3 1.1 0s.3.8 0 1.1L2.3 7.2zm8-1.5c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0L14 7.3l-2.6 2.6c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.5-1.5-1.5-1.6zm-4.1 5c-.1.4-.6.6-1 .5s-.6-.6-.5-1l2.4-6.8c.1-.4.6-.6 1-.5.4.1.6.6.5 1l-2.4 6.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 6`] = `
<AccessibleSVG
  className="icon-favorites"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M7 11.5l-4 2.1c-.2.1-.4 0-.5-.1v-.2l.8-4.4L.1 5.8c-.1-.1-.1-.4 0-.5.1-.1.1-.1.2-.1l4.4-.6 2-4c.1-.2.3-.2.5-.2.1 0 .1.1.2.2l2 4 4.4.6c.2 0 .3.2.3.4 0 .1 0 .1-.1.2l-3.2 3.1.8 4.4c0 .2-.1.4-.3.4h-.2L7 11.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 7`] = `
<AccessibleSVG
  className="icon-feed"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M.8 0h12.4c.4 0 .8.3.8.8v6.8c0 .4-.3.8-.8.8H.8c-.4 0-.8-.3-.8-.8V.8C0 .3.3 0 .8 0zM.7 9.8h12.6c.4 0 .7.3.7.7s-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7s.3-.7.7-.7zm0 2.8h12.6c.4 0 .7.3.7.7 0 .4-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 8`] = `
<AccessibleSVG
  className="icon-notes"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M9.7 1.3H1c-.6 0-1 .4-1 1s.4 1 1 1h7.3l1.4-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h4.8l1.3-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h2.5l.1-.3c.1-.2.1-.5.2-.7l.7-1zm6.4-6.1c.2.3.5.5.7.7.3.2.6.3.9.4l-4.9 7.4-.3.3-1.7 1.3c-.1.1-.2 0-.2-.1l.5-2.2c.1-.2.1-.3.2-.5l4.8-7.3zm1.3-2.1c.6-.2 1.3.1 1.5.7v.3c-.2.4-.3.7-.5 1l-.9-.3c-.3-.2-.6-.4-.8-.8l.7-.9z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 9`] = `
<AccessibleSVG
  className="icon-notifications"
  viewBox="0 0 14 16.1"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M5.5 14.6h3.1c0 .8-.7 1.5-1.5 1.5s-1.6-.7-1.6-1.5zm6.9-7.7v4.5L14 13v.8H0V13l1.6-1.6V6.9c0-2.5 1.8-4.6 4.1-5.1v-.6C5.7.5 6.3 0 6.9 0c.7 0 1.2.5 1.2 1.2v.6c2.5.5 4.3 2.6 4.3 5.1z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 10`] = `
<AccessibleSVG
  className="icon-owned-by-me"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M7,2.6c1.3,0,2.3,1,2.3,2.3c0,1.3-1,2.3-2.3,2.3 c-1.3,0-2.3-1-2.3-2.3C4.7,3.7,5.7,2.6,7,2.6z M7,12.5c-1.6,0-3-0.7-4-1.8C3.6,9.1,5.2,8,7,8c1.8,0,3.4,1.1,4,2.8 C10,11.8,8.6,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 11`] = `
<AccessibleSVG
  className="icon-recents"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M7 7V2.5c0-.3-.2-.5-.5-.5s-.5.2-.5.5v5c0 .3.2.5.5.5h3c.3 0 .5-.2.5-.5S9.8 7 9.5 7H7zm0 7c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 12`] = `
<AccessibleSVG
  className="icon-relay"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M14 2.8H9.8V1.4H2.1v-.3C2.1.5 1.6 0 1 0S0 .5 0 1.1V13c0 .6.5 1.1 1.1 1.1s1.1-.5 1.1-1.1V8.4h5.5l-.6 1.4h7l-1.4-3.5L14 2.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 13`] = `
<AccessibleSVG
  className="icon-shared-with-me"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M9.7,4.7c1,0,1.8,0.8,1.8,1.8s-0.8,1.8-1.8,1.8 c-1,0-1.8-0.8-1.8-1.8S8.7,4.7,9.7,4.7z M4.7,3c1.2,0,2.2,1,2.2,2.2c0,1.2-1,2.2-2.2,2.2c-1.2,0-2.2-1-2.2-2.2C2.5,4,3.5,3,4.7,3z M7,12.5c-2.2,0-4.2-1.3-5-3.2c0.7-0.9,1.7-1.5,2.8-1.5c1.2,0,2.3,0.7,3,1.7c0.5-0.5,1.2-0.8,2-0.8c0.8,0,1.5,0.3,2.1,0.9 C10.9,11.3,9.1,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 14`] = `
<AccessibleSVG
  className="icon-synced"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M6.5 9.6l-2-2c-.2-.2-.5-.2-.7 0-.2.2-.2.5 0 .7L6.6 11c.1.1.2.1.3.1.1 0 .3 0 .4-.2L10 8.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0l-1.9 2V3.3c0-.3-.2-.5-.5-.5s-.4.2-.4.5v6.3zm.4 4.4c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified color 15`] = `
<AccessibleSVG
  className="icon-trash"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#ffffff"
    d="M13.1 0h.9l-2.1 12.8c-.1.7-.8 1.2-1.4 1.2h-7c-.7 0-1.3-.6-1.4-1.2L0 0h13.1zM9.9 2.3H4.1c-.3 0-.6.2-.6.6s.2.6.6.6h5.8c.3 0 .6-.2.6-.6s-.2-.6-.6-.6z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 1`] = `
<AccessibleSVG
  className="icon-admin-console"
  viewBox="0 0 14 16"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M12.8 13.6c.6 0 1.2.5 1.2 1s-.5 1.1-1.2 1.1H1.1c-.6 0-1.2-.5-1.2-1.1s.5-1 1.2-1h11.7zM1.6 12.1c-.9 0-1.6-.7-1.6-1.5V6.9c0-.8.7-1.5 1.6-1.5.9 0 1.6.7 1.6 1.5v3.7c-.1.8-.8 1.5-1.6 1.5zm7-1.5c0 .8-.7 1.5-1.6 1.5s-1.6-.7-1.6-1.5V4.7c0-.8.7-1.5 1.6-1.5s1.6.7 1.6 1.5v5.9zM12.4.3c.9 0 1.6.7 1.6 1.5v8.8c0 .8-.7 1.5-1.6 1.5-.9 0-1.6-.7-1.6-1.5V1.8c.1-.8.8-1.5 1.6-1.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 2`] = `
<AccessibleSVG
  className="icon-automations"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M8,5 L11.4585117,5 C11.7575674,5 12,5.23405867 12,5.52278468 C12,5.61753624 11.9733275,5.71050639 11.9228341,5.79175518 L7.00581071,13.7461068 C6.8519478,13.9936873 6.51933305,14.0739688 6.26289487,13.9254205 C6.09979566,13.8309411 6,13.6607712 6,13.4771363 L6,9 L2.54148831,9 C2.24243258,9 2,8.76594133 2,8.47721532 C2,8.38246376 2.02667254,8.28949361 2.07716592,8.20824482 L6.99418929,0.253893189 C7.1480522,0.00631268077 7.48066695,-0.0739687821 7.73710513,0.0745795227 C7.90020434,0.169058867 8,0.33922885 8,0.522863688 L8,5 Z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 3`] = `
<AccessibleSVG
  className="icon-box-relay"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1 1.002V1h5.001l-1.94 3.668a.5.5 0 0 0 .094.592L8.001 9H3.947l1.022 3.743a1 1 0 0 1-1.932.517L.034 2.261A1 1 0 0 1 1 1.001zM8.001 1h3.495a.5.5 0 0 1 .458.7L10.08 4.625a.5.5 0 0 0 .112.662L13.87 8.17a.5.5 0 0 1-.375.831h-3.494L6.155 5.33a.5.5 0 0 1-.098-.593z"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 4`] = `
<AccessibleSVG
  className="icon-all-files"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1.4 1.4h4.2L7 2.8h5.6c.8 0 1.4.6 1.4 1.4v7c0 .8-.6 1.4-1.4 1.4H1.4C.6 12.6 0 12 0 11.2V2.8c0-.8.6-1.4 1.4-1.4zM2 4.5v1h10v-1H2z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 5`] = `
<AccessibleSVG
  className="icon-dev-console"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M2.3 7.2l1.5 1.5c.3.3.3.8 0 1.1-.3.3-.8.3-1.1 0L.1 7.1l2.6-2.6c.3-.3.8-.3 1.1 0s.3.8 0 1.1L2.3 7.2zm8-1.5c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0L14 7.3l-2.6 2.6c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.5-1.5-1.5-1.6zm-4.1 5c-.1.4-.6.6-1 .5s-.6-.6-.5-1l2.4-6.8c.1-.4.6-.6 1-.5.4.1.6.6.5 1l-2.4 6.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 6`] = `
<AccessibleSVG
  className="icon-favorites"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 11.5l-4 2.1c-.2.1-.4 0-.5-.1v-.2l.8-4.4L.1 5.8c-.1-.1-.1-.4 0-.5.1-.1.1-.1.2-.1l4.4-.6 2-4c.1-.2.3-.2.5-.2.1 0 .1.1.2.2l2 4 4.4.6c.2 0 .3.2.3.4 0 .1 0 .1-.1.2l-3.2 3.1.8 4.4c0 .2-.1.4-.3.4h-.2L7 11.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 7`] = `
<AccessibleSVG
  className="icon-feed"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M.8 0h12.4c.4 0 .8.3.8.8v6.8c0 .4-.3.8-.8.8H.8c-.4 0-.8-.3-.8-.8V.8C0 .3.3 0 .8 0zM.7 9.8h12.6c.4 0 .7.3.7.7s-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7s.3-.7.7-.7zm0 2.8h12.6c.4 0 .7.3.7.7 0 .4-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 8`] = `
<AccessibleSVG
  className="icon-notes"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M9.7 1.3H1c-.6 0-1 .4-1 1s.4 1 1 1h7.3l1.4-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h4.8l1.3-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h2.5l.1-.3c.1-.2.1-.5.2-.7l.7-1zm6.4-6.1c.2.3.5.5.7.7.3.2.6.3.9.4l-4.9 7.4-.3.3-1.7 1.3c-.1.1-.2 0-.2-.1l.5-2.2c.1-.2.1-.3.2-.5l4.8-7.3zm1.3-2.1c.6-.2 1.3.1 1.5.7v.3c-.2.4-.3.7-.5 1l-.9-.3c-.3-.2-.6-.4-.8-.8l.7-.9z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 9`] = `
<AccessibleSVG
  className="icon-notifications"
  viewBox="0 0 14 16.1"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M5.5 14.6h3.1c0 .8-.7 1.5-1.5 1.5s-1.6-.7-1.6-1.5zm6.9-7.7v4.5L14 13v.8H0V13l1.6-1.6V6.9c0-2.5 1.8-4.6 4.1-5.1v-.6C5.7.5 6.3 0 6.9 0c.7 0 1.2.5 1.2 1.2v.6c2.5.5 4.3 2.6 4.3 5.1z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 10`] = `
<AccessibleSVG
  className="icon-owned-by-me"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M7,2.6c1.3,0,2.3,1,2.3,2.3c0,1.3-1,2.3-2.3,2.3 c-1.3,0-2.3-1-2.3-2.3C4.7,3.7,5.7,2.6,7,2.6z M7,12.5c-1.6,0-3-0.7-4-1.8C3.6,9.1,5.2,8,7,8c1.8,0,3.4,1.1,4,2.8 C10,11.8,8.6,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 11`] = `
<AccessibleSVG
  className="icon-recents"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 7V2.5c0-.3-.2-.5-.5-.5s-.5.2-.5.5v5c0 .3.2.5.5.5h3c.3 0 .5-.2.5-.5S9.8 7 9.5 7H7zm0 7c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 12`] = `
<AccessibleSVG
  className="icon-relay"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M14 2.8H9.8V1.4H2.1v-.3C2.1.5 1.6 0 1 0S0 .5 0 1.1V13c0 .6.5 1.1 1.1 1.1s1.1-.5 1.1-1.1V8.4h5.5l-.6 1.4h7l-1.4-3.5L14 2.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 13`] = `
<AccessibleSVG
  className="icon-shared-with-me"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M9.7,4.7c1,0,1.8,0.8,1.8,1.8s-0.8,1.8-1.8,1.8 c-1,0-1.8-0.8-1.8-1.8S8.7,4.7,9.7,4.7z M4.7,3c1.2,0,2.2,1,2.2,2.2c0,1.2-1,2.2-2.2,2.2c-1.2,0-2.2-1-2.2-2.2C2.5,4,3.5,3,4.7,3z M7,12.5c-2.2,0-4.2-1.3-5-3.2c0.7-0.9,1.7-1.5,2.8-1.5c1.2,0,2.3,0.7,3,1.7c0.5-0.5,1.2-0.8,2-0.8c0.8,0,1.5,0.3,2.1,0.9 C10.9,11.3,9.1,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 14`] = `
<AccessibleSVG
  className="icon-synced"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M6.5 9.6l-2-2c-.2-.2-.5-.2-.7 0-.2.2-.2.5 0 .7L6.6 11c.1.1.2.1.3.1.1 0 .3 0 .4-.2L10 8.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0l-1.9 2V3.3c0-.3-.2-.5-.5-.5s-.4.2-.4.5v6.3zm.4 4.4c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with specified width and height 15`] = `
<AccessibleSVG
  className="icon-trash"
  viewBox="0 0 14 14"
  width={16}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M13.1 0h.9l-2.1 12.8c-.1.7-.8 1.2-1.4 1.2h-7c-.7 0-1.3-.6-1.4-1.2L0 0h13.1zM9.9 2.3H4.1c-.3 0-.6.2-.6.6s.2.6.6.6h5.8c.3 0 .6-.2.6-.6s-.2-.6-.6-.6z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 1`] = `
<AccessibleSVG
  className="icon-admin-console"
  title="fool"
  viewBox="0 0 14 16"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M12.8 13.6c.6 0 1.2.5 1.2 1s-.5 1.1-1.2 1.1H1.1c-.6 0-1.2-.5-1.2-1.1s.5-1 1.2-1h11.7zM1.6 12.1c-.9 0-1.6-.7-1.6-1.5V6.9c0-.8.7-1.5 1.6-1.5.9 0 1.6.7 1.6 1.5v3.7c-.1.8-.8 1.5-1.6 1.5zm7-1.5c0 .8-.7 1.5-1.6 1.5s-1.6-.7-1.6-1.5V4.7c0-.8.7-1.5 1.6-1.5s1.6.7 1.6 1.5v5.9zM12.4.3c.9 0 1.6.7 1.6 1.5v8.8c0 .8-.7 1.5-1.6 1.5-.9 0-1.6-.7-1.6-1.5V1.8c.1-.8.8-1.5 1.6-1.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 2`] = `
<AccessibleSVG
  className="icon-automations"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M8,5 L11.4585117,5 C11.7575674,5 12,5.23405867 12,5.52278468 C12,5.61753624 11.9733275,5.71050639 11.9228341,5.79175518 L7.00581071,13.7461068 C6.8519478,13.9936873 6.51933305,14.0739688 6.26289487,13.9254205 C6.09979566,13.8309411 6,13.6607712 6,13.4771363 L6,9 L2.54148831,9 C2.24243258,9 2,8.76594133 2,8.47721532 C2,8.38246376 2.02667254,8.28949361 2.07716592,8.20824482 L6.99418929,0.253893189 C7.1480522,0.00631268077 7.48066695,-0.0739687821 7.73710513,0.0745795227 C7.90020434,0.169058867 8,0.33922885 8,0.522863688 L8,5 Z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 3`] = `
<AccessibleSVG
  className="icon-box-relay"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1 1.002V1h5.001l-1.94 3.668a.5.5 0 0 0 .094.592L8.001 9H3.947l1.022 3.743a1 1 0 0 1-1.932.517L.034 2.261A1 1 0 0 1 1 1.001zM8.001 1h3.495a.5.5 0 0 1 .458.7L10.08 4.625a.5.5 0 0 0 .112.662L13.87 8.17a.5.5 0 0 1-.375.831h-3.494L6.155 5.33a.5.5 0 0 1-.098-.593z"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 4`] = `
<AccessibleSVG
  className="icon-all-files"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1.4 1.4h4.2L7 2.8h5.6c.8 0 1.4.6 1.4 1.4v7c0 .8-.6 1.4-1.4 1.4H1.4C.6 12.6 0 12 0 11.2V2.8c0-.8.6-1.4 1.4-1.4zM2 4.5v1h10v-1H2z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 5`] = `
<AccessibleSVG
  className="icon-dev-console"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M2.3 7.2l1.5 1.5c.3.3.3.8 0 1.1-.3.3-.8.3-1.1 0L.1 7.1l2.6-2.6c.3-.3.8-.3 1.1 0s.3.8 0 1.1L2.3 7.2zm8-1.5c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0L14 7.3l-2.6 2.6c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.5-1.5-1.5-1.6zm-4.1 5c-.1.4-.6.6-1 .5s-.6-.6-.5-1l2.4-6.8c.1-.4.6-.6 1-.5.4.1.6.6.5 1l-2.4 6.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 6`] = `
<AccessibleSVG
  className="icon-favorites"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 11.5l-4 2.1c-.2.1-.4 0-.5-.1v-.2l.8-4.4L.1 5.8c-.1-.1-.1-.4 0-.5.1-.1.1-.1.2-.1l4.4-.6 2-4c.1-.2.3-.2.5-.2.1 0 .1.1.2.2l2 4 4.4.6c.2 0 .3.2.3.4 0 .1 0 .1-.1.2l-3.2 3.1.8 4.4c0 .2-.1.4-.3.4h-.2L7 11.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 7`] = `
<AccessibleSVG
  className="icon-feed"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M.8 0h12.4c.4 0 .8.3.8.8v6.8c0 .4-.3.8-.8.8H.8c-.4 0-.8-.3-.8-.8V.8C0 .3.3 0 .8 0zM.7 9.8h12.6c.4 0 .7.3.7.7s-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7s.3-.7.7-.7zm0 2.8h12.6c.4 0 .7.3.7.7 0 .4-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 8`] = `
<AccessibleSVG
  className="icon-notes"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M9.7 1.3H1c-.6 0-1 .4-1 1s.4 1 1 1h7.3l1.4-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h4.8l1.3-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h2.5l.1-.3c.1-.2.1-.5.2-.7l.7-1zm6.4-6.1c.2.3.5.5.7.7.3.2.6.3.9.4l-4.9 7.4-.3.3-1.7 1.3c-.1.1-.2 0-.2-.1l.5-2.2c.1-.2.1-.3.2-.5l4.8-7.3zm1.3-2.1c.6-.2 1.3.1 1.5.7v.3c-.2.4-.3.7-.5 1l-.9-.3c-.3-.2-.6-.4-.8-.8l.7-.9z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 9`] = `
<AccessibleSVG
  className="icon-notifications"
  title="fool"
  viewBox="0 0 14 16.1"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M5.5 14.6h3.1c0 .8-.7 1.5-1.5 1.5s-1.6-.7-1.6-1.5zm6.9-7.7v4.5L14 13v.8H0V13l1.6-1.6V6.9c0-2.5 1.8-4.6 4.1-5.1v-.6C5.7.5 6.3 0 6.9 0c.7 0 1.2.5 1.2 1.2v.6c2.5.5 4.3 2.6 4.3 5.1z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 10`] = `
<AccessibleSVG
  className="icon-owned-by-me"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M7,2.6c1.3,0,2.3,1,2.3,2.3c0,1.3-1,2.3-2.3,2.3 c-1.3,0-2.3-1-2.3-2.3C4.7,3.7,5.7,2.6,7,2.6z M7,12.5c-1.6,0-3-0.7-4-1.8C3.6,9.1,5.2,8,7,8c1.8,0,3.4,1.1,4,2.8 C10,11.8,8.6,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 11`] = `
<AccessibleSVG
  className="icon-recents"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 7V2.5c0-.3-.2-.5-.5-.5s-.5.2-.5.5v5c0 .3.2.5.5.5h3c.3 0 .5-.2.5-.5S9.8 7 9.5 7H7zm0 7c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 12`] = `
<AccessibleSVG
  className="icon-relay"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M14 2.8H9.8V1.4H2.1v-.3C2.1.5 1.6 0 1 0S0 .5 0 1.1V13c0 .6.5 1.1 1.1 1.1s1.1-.5 1.1-1.1V8.4h5.5l-.6 1.4h7l-1.4-3.5L14 2.8z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 13`] = `
<AccessibleSVG
  className="icon-shared-with-me"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M9.7,4.7c1,0,1.8,0.8,1.8,1.8s-0.8,1.8-1.8,1.8 c-1,0-1.8-0.8-1.8-1.8S8.7,4.7,9.7,4.7z M4.7,3c1.2,0,2.2,1,2.2,2.2c0,1.2-1,2.2-2.2,2.2c-1.2,0-2.2-1-2.2-2.2C2.5,4,3.5,3,4.7,3z M7,12.5c-2.2,0-4.2-1.3-5-3.2c0.7-0.9,1.7-1.5,2.8-1.5c1.2,0,2.3,0.7,3,1.7c0.5-0.5,1.2-0.8,2-0.8c0.8,0,1.5,0.3,2.1,0.9 C10.9,11.3,9.1,12.5,7,12.5z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 14`] = `
<AccessibleSVG
  className="icon-synced"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M6.5 9.6l-2-2c-.2-.2-.5-.2-.7 0-.2.2-.2.5 0 .7L6.6 11c.1.1.2.1.3.1.1 0 .3 0 .4-.2L10 8.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0l-1.9 2V3.3c0-.3-.2-.5-.5-.5s-.4.2-.4.5v6.3zm.4 4.4c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should correctly render icon with title 15`] = `
<AccessibleSVG
  className="icon-trash"
  title="fool"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M13.1 0h.9l-2.1 12.8c-.1.7-.8 1.2-1.4 1.2h-7c-.7 0-1.3-.6-1.4-1.2L0 0h13.1zM9.9 2.3H4.1c-.3 0-.6.2-.6.6s.2.6.6.6h5.8c.3 0 .6-.2.6-.6s-.2-.6-.6-.6z"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 1`] = `
<AccessibleSVG
  className="icon-admin-console is-selected"
  title="pity"
  viewBox="0 0 14 16"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M12.8 13.6c.6 0 1.2.5 1.2 1s-.5 1.1-1.2 1.1H1.1c-.6 0-1.2-.5-1.2-1.1s.5-1 1.2-1h11.7zM1.6 12.1c-.9 0-1.6-.7-1.6-1.5V6.9c0-.8.7-1.5 1.6-1.5.9 0 1.6.7 1.6 1.5v3.7c-.1.8-.8 1.5-1.6 1.5zm7-1.5c0 .8-.7 1.5-1.6 1.5s-1.6-.7-1.6-1.5V4.7c0-.8.7-1.5 1.6-1.5s1.6.7 1.6 1.5v5.9zM12.4.3c.9 0 1.6.7 1.6 1.5v8.8c0 .8-.7 1.5-1.6 1.5-.9 0-1.6-.7-1.6-1.5V1.8c.1-.8.8-1.5 1.6-1.5z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 2`] = `
<AccessibleSVG
  className="icon-automations is-selected"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M8,5 L11.4585117,5 C11.7575674,5 12,5.23405867 12,5.52278468 C12,5.61753624 11.9733275,5.71050639 11.9228341,5.79175518 L7.00581071,13.7461068 C6.8519478,13.9936873 6.51933305,14.0739688 6.26289487,13.9254205 C6.09979566,13.8309411 6,13.6607712 6,13.4771363 L6,9 L2.54148831,9 C2.24243258,9 2,8.76594133 2,8.47721532 C2,8.38246376 2.02667254,8.28949361 2.07716592,8.20824482 L6.99418929,0.253893189 C7.1480522,0.00631268077 7.48066695,-0.0739687821 7.73710513,0.0745795227 C7.90020434,0.169058867 8,0.33922885 8,0.522863688 L8,5 Z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 3`] = `
<AccessibleSVG
  className="icon-box-relay is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1 1.002V1h5.001l-1.94 3.668a.5.5 0 0 0 .094.592L8.001 9H3.947l1.022 3.743a1 1 0 0 1-1.932.517L.034 2.261A1 1 0 0 1 1 1.001zM8.001 1h3.495a.5.5 0 0 1 .458.7L10.08 4.625a.5.5 0 0 0 .112.662L13.87 8.17a.5.5 0 0 1-.375.831h-3.494L6.155 5.33a.5.5 0 0 1-.098-.593z"
    fill="#c4c4c4"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 4`] = `
<AccessibleSVG
  className="icon-all-files is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M1.4 1.4h4.2L7 2.8h5.6c.8 0 1.4.6 1.4 1.4v7c0 .8-.6 1.4-1.4 1.4H1.4C.6 12.6 0 12 0 11.2V2.8c0-.8.6-1.4 1.4-1.4zM2 4.5v1h10v-1H2z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 5`] = `
<AccessibleSVG
  className="icon-dev-console is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M2.3 7.2l1.5 1.5c.3.3.3.8 0 1.1-.3.3-.8.3-1.1 0L.1 7.1l2.6-2.6c.3-.3.8-.3 1.1 0s.3.8 0 1.1L2.3 7.2zm8-1.5c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0L14 7.3l-2.6 2.6c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.5-1.5-1.5-1.6zm-4.1 5c-.1.4-.6.6-1 .5s-.6-.6-.5-1l2.4-6.8c.1-.4.6-.6 1-.5.4.1.6.6.5 1l-2.4 6.8z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 6`] = `
<AccessibleSVG
  className="icon-favorites is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 11.5l-4 2.1c-.2.1-.4 0-.5-.1v-.2l.8-4.4L.1 5.8c-.1-.1-.1-.4 0-.5.1-.1.1-.1.2-.1l4.4-.6 2-4c.1-.2.3-.2.5-.2.1 0 .1.1.2.2l2 4 4.4.6c.2 0 .3.2.3.4 0 .1 0 .1-.1.2l-3.2 3.1.8 4.4c0 .2-.1.4-.3.4h-.2L7 11.5z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 7`] = `
<AccessibleSVG
  className="icon-feed is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M.8 0h12.4c.4 0 .8.3.8.8v6.8c0 .4-.3.8-.8.8H.8c-.4 0-.8-.3-.8-.8V.8C0 .3.3 0 .8 0zM.7 9.8h12.6c.4 0 .7.3.7.7s-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7s.3-.7.7-.7zm0 2.8h12.6c.4 0 .7.3.7.7 0 .4-.3.7-.7.7H.7c-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 8`] = `
<AccessibleSVG
  className="icon-notes is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M9.7 1.3H1c-.6 0-1 .4-1 1s.4 1 1 1h7.3l1.4-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h4.8l1.3-2zm-2.6 4H1c-.6 0-1 .4-1 1s.4 1 1 1h2.5l.1-.3c.1-.2.1-.5.2-.7l.7-1zm6.4-6.1c.2.3.5.5.7.7.3.2.6.3.9.4l-4.9 7.4-.3.3-1.7 1.3c-.1.1-.2 0-.2-.1l.5-2.2c.1-.2.1-.3.2-.5l4.8-7.3zm1.3-2.1c.6-.2 1.3.1 1.5.7v.3c-.2.4-.3.7-.5 1l-.9-.3c-.3-.2-.6-.4-.8-.8l.7-.9z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 9`] = `
<AccessibleSVG
  className="icon-notifications is-selected"
  title="pity"
  viewBox="0 0 14 16.1"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M5.5 14.6h3.1c0 .8-.7 1.5-1.5 1.5s-1.6-.7-1.6-1.5zm6.9-7.7v4.5L14 13v.8H0V13l1.6-1.6V6.9c0-2.5 1.8-4.6 4.1-5.1v-.6C5.7.5 6.3 0 6.9 0c.7 0 1.2.5 1.2 1.2v.6c2.5.5 4.3 2.6 4.3 5.1z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 10`] = `
<AccessibleSVG
  className="icon-owned-by-me is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M7,2.6c1.3,0,2.3,1,2.3,2.3c0,1.3-1,2.3-2.3,2.3 c-1.3,0-2.3-1-2.3-2.3C4.7,3.7,5.7,2.6,7,2.6z M7,12.5c-1.6,0-3-0.7-4-1.8C3.6,9.1,5.2,8,7,8c1.8,0,3.4,1.1,4,2.8 C10,11.8,8.6,12.5,7,12.5z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 11`] = `
<AccessibleSVG
  className="icon-recents is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7 7V2.5c0-.3-.2-.5-.5-.5s-.5.2-.5.5v5c0 .3.2.5.5.5h3c.3 0 .5-.2.5-.5S9.8 7 9.5 7H7zm0 7c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 12`] = `
<AccessibleSVG
  className="icon-relay is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M14 2.8H9.8V1.4H2.1v-.3C2.1.5 1.6 0 1 0S0 .5 0 1.1V13c0 .6.5 1.1 1.1 1.1s1.1-.5 1.1-1.1V8.4h5.5l-.6 1.4h7l-1.4-3.5L14 2.8z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 13`] = `
<AccessibleSVG
  className="icon-shared-with-me is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M7,0C3.1,0,0,3.1,0,7s3.1,7,7,7s7-3.1,7-7S10.9,0,7,0z M9.7,4.7c1,0,1.8,0.8,1.8,1.8s-0.8,1.8-1.8,1.8 c-1,0-1.8-0.8-1.8-1.8S8.7,4.7,9.7,4.7z M4.7,3c1.2,0,2.2,1,2.2,2.2c0,1.2-1,2.2-2.2,2.2c-1.2,0-2.2-1-2.2-2.2C2.5,4,3.5,3,4.7,3z M7,12.5c-2.2,0-4.2-1.3-5-3.2c0.7-0.9,1.7-1.5,2.8-1.5c1.2,0,2.3,0.7,3,1.7c0.5-0.5,1.2-0.8,2-0.8c0.8,0,1.5,0.3,2.1,0.9 C10.9,11.3,9.1,12.5,7,12.5z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 14`] = `
<AccessibleSVG
  className="icon-synced is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M6.5 9.6l-2-2c-.2-.2-.5-.2-.7 0-.2.2-.2.5 0 .7L6.6 11c.1.1.2.1.3.1.1 0 .3 0 .4-.2L10 8.1c.2-.2.2-.5 0-.7-.2-.2-.5-.2-.7 0l-1.9 2V3.3c0-.3-.2-.5-.5-.5s-.4.2-.4.5v6.3zm.4 4.4c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;

exports[`icons/left-sidebar should respect selected state 15`] = `
<AccessibleSVG
  className="icon-trash is-selected"
  title="pity"
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    color="#c4c4c4"
    d="M13.1 0h.9l-2.1 12.8c-.1.7-.8 1.2-1.4 1.2h-7c-.7 0-1.3-.6-1.4-1.2L0 0h13.1zM9.9 2.3H4.1c-.3 0-.6.2-.6.6s.2.6.6.6h5.8c.3 0 .6-.2.6-.6s-.2-.6-.6-.6z"
    fill="#c4c4c4"
  />
</AccessibleSVG>
`;
